--- a/skyapp-frontend/src/SolarCycle.css
+++ b/skyapp-frontend/src/SolarCycle.css
@@ -68,7 +68,7 @@
   gap: 2px;
   background: rgba(117, 117, 111, 0.12);
   border-radius: 1rem;
-  padding: 10px;
+  padding: 6px 4px;
   border: 0px solid rgb(83, 109, 118);
 }
 
@@ -97,5 +97,5 @@
 }
 
 .zenith-label {
-  font-size: 1.4rem;
+  font-size: 0.75rem;
 }
